--- a/index.html
+++ b/index.html
@@ -4,48 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nathaniel's Website</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <h1>Welcome to my Profile!</h1>
-      <img src="images/pp.jpg" alt="Profile Picture">
+  <div class="banner" style="background-image: linear-gradient(to right, rgba(0,255,0,0.1),rgba(0,0,0,0.1)), url('images/banner-blue.jpg');">
+    <div class="container text-right">
+      <div class="container-middle row">
+        <div class="profile-picture col-12 col-md-3">
+          <img src="images/pp.jpg" alt="Profile Picture">
+        </div>
+        <div class="profile-content py-2 col-12 col-md-9">
+          <h1>Hello World! I'm Nathaniel!</h1>
+          <p>Ex-civil engineer embarking in IT industry!</p>
+          <img src="images/railslogo.png" alt="railslogo">
+          <img src="images/rubylogo.png" alt="rubylogo">
+          <img src="images/jslogo.png" alt="jslogo">
+          <img src="images/reactlogo.png" alt="reactlogo">
+          <div class="social-media pt-4">
+            <p class="inline-block">Follow me :</p>
+            <a href="https://github.com/nielsantosa"><i class="fab fa-github-square"></i></a>
+            <a href="https://www.linkedin.com/in/nathaniel-santosa-64a6b6105/"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="card">
-      <ul>
-        <li class="inline-block width-33">
-          <h3>Positive 🌟</h3>
-          <p>I am positive!</p>
-        </li>
-        <li class="inline-block width-33">
-          <h3>Energetic 💪</h3>
-          <p>I am energetic!</p>
-        </li>
-        <li class="inline-block width-33">
-          <h3>Lovely 🥰</h3>
-          <p>I am lovely!</p>
-        </li>
-      </ul>
-    </div>
-    <div class="card">
-      <a href="#">Discover me more here!</a>
-    </div>
-    <div class="card">
-      <h3>Follow me :</h3>
-      <ul>
-        <li class="inline-block width-33">
-          <a href="#"><i class="fab fa-facebook"></i> Nathaniel Santosa</a>
-        </li>
-        <li class="inline-block width-33">
-          <a href="#"><i class="fab fa-github"></i> nielsantosa</a>
-        </li>
-        <li class="inline-block width-33">
-          <a href="#"><i class="fab fa-twitter"></i> nielsantosa</a>
-        </li>
-      </ul>
-    </div>
+  </div>
+  <div class="banner-secondary">
+
+  </div>
+
+
+  <div class="footer">
+    <p>&copy2021 - Nathaniel Santosa </p>
   </div>
 </body>
 </html>
